define as configurações básicas para execução do protheus em modo debug

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,8 +23,8 @@
     ],
     "advpl.compileFolderRegex": ".*\\.(prw|prx|prg|apw|aph|tlpp|png|bmp|tres|js|html|app)",
     "advpl.pathPatchBuild": "c:\\patches\\",
-    "advpl.debug_multiThread": false,
-    "advpl.enableCoverage": false,
+    "advpl.debug_multiThread": true,
+    "advpl.enableCoverage": true,
     "advpl.debug_ignoreSourceNotFound": false,
     "advpl.debug_showTables": true,
     "advpl.debug_showPrivates": false,
