--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,7 +24,7 @@
     "advpl.compileFolderRegex": ".*\\.(prw|prx|prg|apw|aph|tlpp|png|bmp|tres|js|html|app)",
     "advpl.pathPatchBuild": "c:\\patches\\",
     "advpl.debug_multiThread": true,
-    "advpl.enableCoverage": true,
+    "advpl.enableCoverage": false,
     "advpl.debug_ignoreSourceNotFound": false,
     "advpl.debug_showTables": true,
     "advpl.debug_showPrivates": false,
